# Algoritma-Trading-Wd-Gann-dan-John-F-Ehlers

./: README.md  api.py  api_comprehensive.py  api_enhanced.py  api_enhanced_part2.py  api_sync.py  api_v2.py  start_production.py  worklog.md
config/: broker_config.yaml
connectors/: __init__.py  crypto_low_latency.py  exchange_connector.py  fix_low_latency.py
core/: __init__.py  analytics_api.py  ath_atl_predictor.py  data_feed.py  execution_engine.py  risk_engine.py  signal_engine.py  trading_orchestrator.py
cython_compute/: __init__.py  setup.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
gann_quant_ai/: .dockerignore  AUDIT_REPORT.md  api.py  start_production.py
gann_quant_ai/.agent/: QUICK_START.md
gann_quant_ai/config/: gann_config.yaml  rl_config.yaml
gann_quant_ai/connectors/: dex_connector.py  metatrader_connector.py
gann_quant_ai/core/: hft_engine.py
gann_quant_ai/frontend/: vite.config.ts
gann_quant_ai/modules/: __init__.py
gann_quant_ai/tests/: test_ath_atl.py
go_api/: go.mod
modules/astro/: astro_ephemeris.py
modules/ehlers/: cyber_cycle.py  mama.py
modules/gann/: gann_wave.py  (+1 more)
monitoring/: dashboard_metrics.py
rust_engine/: Cargo.toml
rust_engine/src/: main.rs
rust_engine/src/execution/: mod.rs
rust_engine/src/orderbook/: mod.rs
rust_engine/src/risk/: mod.rs
strategies/: gann_strategy.py
tests/: test_execution_engine.py  test_forecasting.py  test_frontend_backend_sync.py  test_full_sync_verification.py  test_mt4_low_latency.py  test_project_comprehensive.py
(+37 files in other folders)
